// db_sosro - DBML (SKEMA YANG BENERAN JALAN SEKARANG)
// Sumber: introspeksi langsung ke MySQL dev (information_schema.columns/key_column_usage/statistics),
// bukan lagi dokumen rencana. Kalau nanti ada migration baru, file ini harus di-generate ulang dari DB,
// jangan diedit manual berdasar dugaan.
//
// Perbedaan dari draft normalisasi awal (plans/db_sosro_normalized.dbml versi lama, sebelum file ini
// di-refresh) -- dicatat di sini biar ketauan mana yang berubah pikiran pas eksekusi:
//
// 1. lowongan.bidang TETAP varchar bebas, BUKAN jadi bidang_id FK ke job_fields.
//    Sempat dieksekusi jadi FK, lalu di-revert (commit "Revert lowongan.bidang from job_fields FK
//    back to hardcoded string") -- job_fields tetap ada sebagai tabel tapi cuma dipakai buat
//    applicant_job_field_interests (minat pelamar), tidak dipakai lowongan.
// 2. pendidikan_formal & pendidikan_informal jadi 2 TABEL TERPISAH (applicant_formal_educations,
//    applicant_informal_educations) -- BUKAN 1 tabel applicant_educations gabungan dengan kolom
//    nullable seperti draft awal. Shape field 2 tipe pendidikan ini beda jauh, gabung 1 tabel bikin
//    terlalu banyak kolom nullable per baris.
// 3. contacts dapat kolom cabang_id (FK cabangs) TAMBAHAN di luar admin_id yang sudah ada --
//    fitur "assign ke semua admin cabang" (bukan cuma 1 admin), admin_id sekarang berarti "siapa
//    yang balas", cabang_id berarti "cabang tujuan pesan".
// 4. applicants.user_id dan applicant_profiles.applicant_id TERNYATA TIDAK PERNAH dikasih unique
//    constraint di DB (cuma index biasa dari FK) -- walau relasinya di kode Eloquent hasOne/belongsTo
//    1:1. Draft lama sempat nyatet "ditambah unique" sebagai rencana, tapi tidak pernah benar-benar
//    dieksekusi ke migration manapun. Dicatat apa adanya sesuai kondisi nyata di DB.
// 5. jk, perokok, bertato, contacts.status, lowongan.status_lowongan itu ENUM asli di level MySQL
//    (bukan varchar+note kayak draft lama nebak). cabangs.kelompok sebaliknya JUSTRU varchar biasa
//    (bukan DB enum), validasinya cuma di level aplikasi.
// 6. BARU (belum ada di refresh sebelumnya): tahapan seleksi (dulu hardcode array PHP) sekarang
//    tabel recruitment_stages + recruitment_stage_pipeline. applications.status tetap varchar bebas
//    dan TIDAK ada FK ke recruitment_stages.key -- relasinya cuma konvensi nilai string yang harus
//    sama persis, tidak ditegakkan di level DB.
//
// Yang masih sama dengan keputusan di draft awal (lihat plans/normalisasi-struktur-database-prioritas.md
// buat histori diskusinya): kategori & tipe_lowongan lowongan tetap varchar bebas (fixed vocabulary
// kecil, tidak worth jadi tabel), cabangs & job_fields tetap tabel master.

Table admins {
  id bigint [pk, increment]
  name varchar
  email varchar [unique, not null]
  role varchar [default: 'admin']
  cabang_id bigint [ref: > cabangs.id, note: 'nullable -- superadmin tidak terikat 1 cabang']
  photo varchar
  password varchar [not null]
  remember_token varchar
  created_at timestamp
  updated_at timestamp
}

Table applicants {
  id bigint [pk, increment]
  status varchar [not null, default: 'Pending', note: 'nilai aktual dipakai kode: Pending/Reviewed/Accepted (seeder, huruf besar) dan "active"/"draft" (ProfileController, huruf kecil) -- tidak konsisten, varchar bebas bukan enum']
  created_at timestamp
  updated_at timestamp
  user_id bigint [ref: > users.id, note: 'nullable, TIDAK unique di DB walau relasi User::applicant() hasOne di kode']
  profile_completed boolean [not null, default: 0]
  biodata_progress int [not null, default: 0]
  consent_accepted boolean [not null, default: 0]
  personal_completed boolean [not null, default: 0]
  family_completed boolean [not null, default: 0]
  education_completed boolean [not null, default: 0]
  experience_completed boolean [not null, default: 0]
  documents_completed boolean [not null, default: 0]
  biodata_submitted boolean [not null, default: 0]
}

Table applicant_documents {
  id bigint [pk, increment]
  applicant_id bigint [not null, ref: > applicants.id]
  type varchar [not null, note: 'foto, cv, ktp, ijazah, sim, npwp, bpjs_kes, bpjs_tk, lain']
  file_path varchar [not null]
  is_required boolean [not null, default: 0]
  extracted_data json
  created_at timestamp
  updated_at timestamp
}

Table applicant_profiles {
  id bigint [pk, increment]
  applicant_id bigint [not null, ref: > applicants.id, note: 'TIDAK unique di DB walau relasi Applicant::profile() hasOne di kode']
  nik varchar [unique]
  jk enum('L','P')
  tempat_lahir varchar
  tanggal_lahir date
  tinggi_badan varchar
  berat_badan varchar
  alamat text
  domisili text
  phone varchar
  agama varchar
  status_nikah varchar
  jenis_sim json [note: 'tetap JSON, tidak dinormalisasi']
  instagram varchar
  linkedin varchar
  created_at timestamp
  updated_at timestamp
  ex_employee varchar
  ex_company_name varchar
  ex_last_position varchar
  penyakit text
  perokok enum('ya','tidak')
  bertato enum('ya','tidak')
  expected_salary varchar
  expected_facilities text
  ready_dinas varchar(10) [not null, default: 'Ya']
  ready_placed_out varchar(10) [not null, default: 'Ya']
  company_reference varchar
}

// ================= TABEL ANAK (pengganti kolom JSON lama) =================

Table applicant_family_members {
  id bigint [pk, increment]
  applicant_profile_id bigint [not null, ref: > applicant_profiles.id]
  tipe varchar [not null, note: 'inti, kandung -- satu-satunya kolom NOT NULL selain FK/timestamp, jadi baris draft/partial tetap butuh ini keisi']
  nama varchar
  hubungan varchar
  pendidikan varchar
  tempat_lahir varchar
  tgl_lahir date
  pekerjaan varchar
  hp varchar
  created_at timestamp
  updated_at timestamp
}

Table applicant_formal_educations {
  id bigint [pk, increment]
  applicant_profile_id bigint [not null, ref: > applicant_profiles.id]
  jenjang varchar
  sekolah varchar
  jurusan varchar
  nilai varchar
  tahun_masuk int
  tahun_lulus int
  is_current_edu boolean [not null, default: 0]
  created_at timestamp
  updated_at timestamp
}

Table applicant_informal_educations {
  id bigint [pk, increment]
  applicant_profile_id bigint [not null, ref: > applicant_profiles.id]
  kursus varchar
  penyelenggara varchar
  tahun int
  created_at timestamp
  updated_at timestamp
}

Table applicant_work_experiences {
  id bigint [pk, increment]
  applicant_profile_id bigint [not null, ref: > applicant_profiles.id]
  perusahaan varchar
  jabatan varchar
  divisi varchar
  gaji varchar
  fasilitas varchar
  masih_bekerja boolean [not null, default: 0]
  tanggal_masuk date
  tanggal_keluar date
  alasan text
  kontak_referensi varchar
  created_at timestamp
  updated_at timestamp
}

Table applicant_job_field_interests {
  applicant_profile_id bigint [not null, ref: > applicant_profiles.id]
  job_field_id bigint [not null, ref: > job_fields.id]
  rank int [not null, note: '1 = paling diminati, 13 = paling kurang diminati -- dari urutan drag SortableJS di form. Setiap pelamar selalu punya persis 13 baris']

  indexes {
    (applicant_profile_id, job_field_id) [pk]
  }
}

// ================= TABEL MASTER (pengganti string bebas) =================

Table cabangs {
  id bigint [pk, increment]
  nama varchar [not null, unique, note: 'KPW Jakarta Banten, Pabrik Cakung, Kantor Pusat, dst']
  kelompok varchar [not null, note: 'HO, KPW, Pabrik, Lainnya -- varchar biasa di DB, validasi cuma di level aplikasi, bukan DB enum']
  created_at timestamp
  updated_at timestamp
}

Table job_fields {
  id bigint [pk, increment]
  nama varchar [not null, unique, note: 'Marketing, Finance & Accounting, dst -- cuma dipakai applicant_job_field_interests, TIDAK dipakai lowongan (lihat catatan #1 di atas)']
  created_at timestamp
  updated_at timestamp
}

// ================= applications, lowongan =================

Table applications {
  id bigint [pk, increment]
  applicant_id bigint [not null, ref: > applicants.id]
  lowongan_id bigint [not null, ref: > lowongan.id]
  status varchar [not null, note: 'state machine pipeline rekrutmen: pending, psikotes, interview, offering, mcu, accepted, rejected -- varchar bebas, bukan DB enum, karena tahapnya masih bisa nambah']
  notes text
  created_at timestamp
  updated_at timestamp

  indexes {
    (applicant_id, lowongan_id) [unique]
  }
}

Table lowongan {
  id bigint [pk, increment]
  kode_lowongan varchar(50) [not null, unique]
  judul_lowongan varchar [not null]
  kategori varchar [note: 'varchar bebas, tidak dinormalisasi -- fixed vocabulary kecil (Profesional, Management Trainee, Magang)']
  bidang varchar [note: 'varchar bebas -- SEMPAT jadi bidang_id FK ke job_fields, di-revert balik jadi string (lihat catatan #1 di atas)']
  tipe_lowongan varchar [note: 'varchar bebas, tidak dinormalisasi -- fixed vocabulary kecil (Full-time, Part-time, Freelance, Kontrak)']
  cabang_id bigint [ref: > cabangs.id, note: 'ganti dari penempatan_cabang varchar lama']
  lokasi_kerja varchar(100) [not null]
  jobdesk text
  kualifikasi text
  tanggal_mulai date [not null]
  tanggal_akhir date [not null]
  status_lowongan enum('aktif','tidak aktif','dihapus','selesai') [not null, default: 'aktif']
  created_by bigint [ref: > admins.id]
  updated_by bigint [ref: > admins.id]
  created_at timestamp
  updated_at timestamp
}

// ================= recruitment_stages, recruitment_stage_pipeline (tahapan seleksi, data-driven) =================

Table recruitment_stages {
  id bigint [pk, increment]
  key varchar [not null, unique, note: 'pending, administration, psikotes, interview, study case, panel bod, simulasi, offering, mcu, accepted, rejected']
  label varchar [not null, note: 'label sisi admin']
  applicant_label varchar [note: 'override label sisi pelamar -- null berarti fallback ke label admin (mis. simulasi -> "Simulasi Field", mcu -> "Medical Check Up")']
  color_classes varchar [not null, note: 'kelas Tailwind badge, mis. "bg-yellow-50 text-yellow-600 border-yellow-100"']
  is_universal boolean [not null, default: 0, note: 'true cuma untuk pending/accepted/rejected -- tersedia di semua kategori lowongan, di luar urutan pipeline']
  is_bulk_updatable boolean [not null, default: 0, note: 'true untuk stage yang bisa diubah lewat bulk-update admin: administration/psikotes/interview/rejected']
  created_at timestamp
  updated_at timestamp
}

Table recruitment_stage_pipeline {
  id bigint [pk, increment]
  kategori varchar [not null, note: 'Profesional, Management Trainee, Magang -- harus sama persis dengan lowongan.kategori, TIDAK ada FK karena lowongan.kategori tetap varchar bebas']
  recruitment_stage_id bigint [not null, ref: > recruitment_stages.id, note: 'ON DELETE CASCADE']
  order int [not null, note: 'urutan tahap dalam pipeline kategori ini, mulai dari 1 -- urutan ini cuma dipakai buat filter dropdown UI admin, TIDAK ditegakkan sebagai validasi transisi status di backend']
  created_at timestamp
  updated_at timestamp

  indexes {
    (kategori, recruitment_stage_id) [unique]
    (kategori, order) [unique]
  }
}

// ================= tidak berubah dari skema Laravel default / lama =================

Table cache {
  key varchar [pk]
  value mediumtext [not null]
  expiration int [not null]
}

Table cache_locks {
  key varchar [pk]
  owner varchar [not null]
  expiration int [not null]
}

Table contacts {
  id bigint [pk, increment]
  name varchar [not null]
  email varchar [not null]
  city varchar [not null]
  message text [not null]
  status enum('pending','forwarded','replied') [not null, default: 'pending']
  admin_id bigint [ref: > admins.id, note: 'sekarang berarti "siapa yang balas", bukan lagi penerima tunggal']
  cabang_id bigint [ref: > cabangs.id, note: 'BARU -- cabang tujuan pesan, resolve otomatis dari city pas contact masuk. Semua admin di cabang itu bisa lihat & balas (lihat catatan #3 di atas)']
  created_at timestamp
  updated_at timestamp
}

Table failed_jobs {
  id bigint [pk, increment]
  uuid varchar [not null, unique]
  connection text [not null]
  queue text [not null]
  payload longtext [not null]
  exception longtext [not null]
  failed_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table jobs {
  id bigint [pk, increment]
  queue varchar [not null]
  payload longtext [not null]
  attempts int [not null]
  reserved_at int
  available_at int [not null]
  created_at int [not null]

  indexes {
    queue
  }
}

Table job_batches {
  id varchar [pk]
  name varchar [not null]
  total_jobs int [not null]
  pending_jobs int [not null]
  failed_jobs int [not null]
  failed_job_ids longtext [not null]
  options mediumtext
  cancelled_at int
  created_at int [not null]
  finished_at int
}

Table migrations {
  id int [pk, increment]
  migration varchar [not null]
  batch int [not null]
}

Table password_reset_tokens {
  email varchar [pk]
  token varchar [not null]
  created_at timestamp
}

Table sessions {
  id varchar [pk]
  user_id bigint
  ip_address varchar(45)
  user_agent text
  payload longtext [not null]
  last_activity int [not null]

  indexes {
    user_id
    last_activity
  }
}

Table users {
  id bigint [pk, increment]
  name varchar [not null]
  email varchar [not null, unique]
  role varchar [not null, default: 'user']
  email_verified_at timestamp
  password varchar [not null]
  remember_token varchar
  created_at timestamp
  updated_at timestamp
  photo varchar
}
